[package]
name = "ruleset"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
once_cell = "1.8"
