[package]
name = "ruleset"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1", features = ["full", "fs"] }
tower-http = { version = "0.6.6", features = ["compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
once_cell = "1.8"
ipnet = "2.9"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

